Update handcrafted fork replacement on packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ongr/elasticsearch-bundle",
+    "name": "handcraftedinthealps/elasticsearch-bundle",
     "description": "Elasticsearch bundle for Symfony.",
     "type": "symfony-bundle",
     "homepage": "http://ongr.io",
@@ -8,6 +8,10 @@
         {
             "name": "ONGR team",
             "homepage": "http://www.ongr.io"
+        },
+        {
+            "name": "Handcrafted in the Alps Team",
+            "homepage": "https://github.com/handcraftedinthealps/ElasticsearchBundle/graphs/contributors"
         }
     ],
     "require": {
@@ -52,6 +56,9 @@
         "psr-4": {
             "ONGR\\App\\": "\\Tests\\app\\src\\"
         }
+    },
+    "replace": {
+        "ongr/elasticsearch-bundle": "self.version"
     },
     "minimum-stability": "dev",
     "extra": {
