--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "doctrine/collections": "^1.5",
         "monolog/monolog": "^1.24",
         "elasticsearch/elasticsearch": "^7.0",
-        "ongr/elasticsearch-dsl": "^7.0"
+        "handcraftedinthealps/elasticsearch-dsl": "^7.0"
     },
     "require-dev": {
         "mikey179/vfsstream": "~1.6",
