--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "doctrine/cache": "~1.4",
         "doctrine/collections": "~1.4",
         "monolog/monolog": "~1.10",
-        "ongr/elasticsearch-dsl": "~5.0"
+        "handcraftedinthealps/elasticsearch-dsl": "~5.0"
     },
     "require-dev": {
         "mikey179/vfsstream": "~1.4",
